line spacing on mobile fix

--- a/src/Components/styles/secondDiv.css
+++ b/src/Components/styles/secondDiv.css
@@ -73,7 +73,7 @@
     }
     
     p {
-        line-height: 2.5rem;
+        line-height: 2rem;
         font-size: 1rem;
     }
     
